Fixing non-wrapping of words in posts. Found and fixed by davidlougheed. #100

--- a/style/Air.css
+++ b/style/Air.css
@@ -800,6 +800,7 @@ MAIN POSTS
 .pun .postmsg {
 	width:100%;
 	overflow: hidden;
+	word-wrap: break-word;
 }
 
 .pun .blockpost .postfootright {
