--- a/style/Oxygen.css
+++ b/style/Oxygen.css
@@ -794,6 +794,7 @@
 	width:98%;
 	overflow: hidden;
 	padding-bottom: 6px;
+	word-wrap: break-word;
 	}
 
 .pun .postfootright ul, .pun .postfootright div, .pun .postfootright p,
